@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-09-03T08:08:56Z",
+  "timestamp" : "2023-09-04T00:36:10Z",
   "count_outdated" : 5037,
   "uniques_outdated" : 1550,
-  "count" : 5057,
+  "count" : 5058,
   "uniques" : 1563,
   "clones" : [
     {
@@ -79,9 +79,9 @@
     },
     {
       "timestamp": "2023-09-03T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
