@@ -1,5 +1,5 @@
 {
-  "count": 20,
+  "count": 21,
   "uniques": 6,
   "clones": [
     {
@@ -44,7 +44,7 @@
     },
     {
       "timestamp": "2023-09-03T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
